# CodingEveryday

./: .gitignore  README.md
Day001-Machine Learning#1-2/: README.md
Day002-Machine Learning#3-4/: README.md
Day002-Set up for Machine Learning/: README.md
Day003-Xlsx upload and extract data/: README.md  app.js  package.json
Day004-Machine Learning#3-4/: README.md
Day005-Bootstrap, jquery/: README.md  app.js  package.json
Day006-Download file/: README.md  app.js
Day006-Print pdf/: .gitignore  README.md  app.js
Day007-Print pdf/: README.md  abc.xlsx  app.js  package.json
Day008-Firebase storage/: README.md  app.js  package.json
Day008-Optim image/: app.js
Day009-Optim Image/: README.md  app.js  package.json
Day010-Swift and Play video/: .gitignore  README.md
Day012-Master & Slave/: README.md
Day013-Pokemon Go/: README.md
Day014-NanoPi/: README.md
Day015-Website Alignment/: README.md  app.js  package.json
Day016-Eventbus/: README.md
Day017-Protocol Buffer/: README.md
Day018-pug(formerly jade)/: README.md
Day019-Project meeting/: README.md
Day020-Redesign story/: README.md
Day021-Hide_StatusBar/: README.md
Day022-I want to build {blank}/: README.md
Day023-PJAX/: .gitignore  README.md  app.js  package.json
Day024-SASS/: .gitignore  README.md  app.js  package.json
Day025-Supercharged/: README.md
Day026-kiosk_mode/: .gitignore  README.md
Day026-lock_task_mode/: README.md
Day027-ffmpeg/: README.md
Day036-My_first_Clion_project/: CMakeLists.txt  README.md  main.cpp
Day036-My_first_Clion_project/cmake/: FindGLM.cmake
(+151 files in other folders)
